--- a/styles/widgets/base/scheduler.less
+++ b/styles/widgets/base/scheduler.less
@@ -598,7 +598,6 @@
     }
 
     .dx-scheduler-date-time-shader-all-day {
-        margin-left: @SCHEDULER_LEFT_COLUMN_WIDTH;
         width: 100%;
         background-color: @SCHEDULER_TIME_INDICATOR_BACKGROUND_COLOR;
         position: absolute;
@@ -656,8 +655,13 @@
             }
         }
 
-        .dx-scheduler-date-time-shader {
+        .dx-scheduler-date-time-shader,
+        .dx-scheduler-date-time-shader-all-day {
             margin-left: @SCHEDULER_LEFT_COLUMN_WIDTH;
+
+            .dx-scheduler-small & {
+                margin-left: -@SCHEDULER_LEFT_COLUMN_WIDTH * @SCHEDULER_SMALL_SIZE_FACTOR;
+            }
         }
 
         .dx-scheduler-date-time-shader-top,
@@ -670,6 +674,10 @@
                 position: absolute;
                 margin-left: @SCHEDULER_LEFT_COLUMN_WIDTH;
                 background-color: @SCHEDULER_TIME_INDICATOR_BACKGROUND_COLOR;
+
+                .dx-scheduler-small & {
+                    margin-left: @SCHEDULER_LEFT_COLUMN_WIDTH * @SCHEDULER_SMALL_SIZE_FACTOR;
+                }
             }
         }
 
