Fix Scheduler shader position for small screen (T886366) (#13013)
(cherry picked from commit aa070fd67d697d3bbf0d14003983420eccbfd9fe)

--- a/styles/widgets/base/scheduler.less
+++ b/styles/widgets/base/scheduler.less
@@ -595,7 +595,6 @@
     }
 
     .dx-scheduler-date-time-shader-all-day {
-        margin-left: @SCHEDULER_LEFT_COLUMN_WIDTH;
         width: 100%;
         background-color: @SCHEDULER_TIME_INDICATOR_BACKGROUND_COLOR;
         position: absolute;
@@ -653,8 +652,13 @@
             }
         }
 
-        .dx-scheduler-date-time-shader {
+        .dx-scheduler-date-time-shader,
+        .dx-scheduler-date-time-shader-all-day {
             margin-left: @SCHEDULER_LEFT_COLUMN_WIDTH;
+
+            .dx-scheduler-small & {
+                margin-left: -@SCHEDULER_LEFT_COLUMN_WIDTH * @SCHEDULER_SMALL_SIZE_FACTOR;
+            }
         }
 
         .dx-scheduler-date-time-shader-top,
@@ -667,6 +671,10 @@
                 position: absolute;
                 margin-left: @SCHEDULER_LEFT_COLUMN_WIDTH;
                 background-color: @SCHEDULER_TIME_INDICATOR_BACKGROUND_COLOR;
+
+                .dx-scheduler-small & {
+                    margin-left: @SCHEDULER_LEFT_COLUMN_WIDTH * @SCHEDULER_SMALL_SIZE_FACTOR;
+                }
             }
         }
 
