--- a/styles/widgets/common/dropDownButton.less
+++ b/styles/widgets/common/dropDownButton.less
@@ -2,8 +2,6 @@
 @import (once) "./popup.less";
 @import (once) "./list.less";
 
-@DROPDOWNBUTTON_HORIZONTAL_PADDING: 5px;
-
 .dx-dropdownbutton {
     display: inline-block;
 }
@@ -44,12 +42,12 @@
 
 .dx-dropdownbutton-action.dx-buttongroup-last-item {
     &.dx-button .dx-button-content {
-        padding-left: @DROPDOWNBUTTON_HORIZONTAL_PADDING * 2;
+        padding-left: 10px;
         padding-right: 0;
 
         .dx-rtl & {
             padding-left: 0;
-            padding-right: @DROPDOWNBUTTON_HORIZONTAL_PADDING * 2;
+            padding-right: 10px;
         }
     }
 }
@@ -57,15 +55,15 @@
 .dx-dropdownbutton&:not(.dx-dropdownbutton-splitted) {
     .dx-button-has-icon:not(.dx-button-has-text) {
         .dx-button-content {
-            padding-left: @DROPDOWNBUTTON_HORIZONTAL_PADDING;
-            padding-right: @DROPDOWNBUTTON_HORIZONTAL_PADDING;
+            padding-left: 5px;
+            padding-right: 5px;
         }
     }
 
     .dx-button-has-text.dx-button {
         .dx-button-content {
-            padding-left: @DROPDOWNBUTTON_HORIZONTAL_PADDING * 2;
-            padding-right: @DROPDOWNBUTTON_HORIZONTAL_PADDING * 2;
+            padding-left: 10px;
+            padding-right: 10px;
         }
     }
 }
