DataGrid - The "Export all data" toolbar item is rendered incorrectly (T886693 ) (#12991)

--- a/styles/widgets/common/toolbar.less
+++ b/styles/widgets/common/toolbar.less
@@ -159,6 +159,17 @@
 
     .dx-button-content {
         text-align: left;
+
+        .dx-rtl&,
+        .dx-rtl & {
+            text-align: right;
+        }
+    }
+}
+
+.dx-toolbar-menu-section .dx-toolbar-hidden-button {
+    .dx-toolbar-item-auto-hide {
+        padding: 0;
     }
 }
 
