fix material selector
(cherry picked from commit c43259052e473ada9244e9b642736b3a13849a0c)

--- a/styles/widgets/material/dropDownButton.material.less
+++ b/styles/widgets/material/dropDownButton.material.less
@@ -70,7 +70,7 @@
     }
 
     &:not(.dx-dropdownbutton-has-arrow) {
-        .dx-button-has-text {
+        .dx-button.dx-button-has-text {
             .dx-button-content {
                 padding-left: @MATERIAL_DROPDOWNBUTTON_HORIZONTAL_PADDING;
                 padding-right: @MATERIAL_DROPDOWNBUTTON_HORIZONTAL_PADDING;
