Tabpanel -  change priority in styles for width of Tab

--- a/styles/widgets/generic/tabPanel.generic.less
+++ b/styles/widgets/generic/tabPanel.generic.less
@@ -75,7 +75,6 @@
         color: @tabs-border-color;
 
         .dx-tab {
-            width: 140px;
             color: @tabs-border-color;
 
             .dx-tab-content {
@@ -102,6 +101,10 @@
             display: block;
             border: none;
         }
+    }
+
+    .dx-tab {
+        width: 140px;
     }
 
     &:not(.dx-empty-collection) {
