Toolbar - support for button group (#12838)
* Toolbar now supports button group widget

* Fix rtl issue

* Fix icon size issue for material theme

* fix toolbar icons issues

* Fix less gulp task processing https://devextreme-ci.devexpress.com/DevExpress/DevExtreme/31311/126

* Try to fix gulp task

* Try to determine why sass test is failed

* Fix regular expression for valid translation to sass

* Fix translations to sass

* dirty realization of focus navigation

* Fix keyboard navigation logic

* Remove custom keyboard navigation logic

* Fix layout in case of multiple button groups

* Simple test for toolbar

* Fix test in case if open menu method is broken

--- a/styles/widgets/generic/toolbar.generic.less
+++ b/styles/widgets/generic/toolbar.generic.less
@@ -208,3 +208,16 @@
         }
     }
 }
+
+.dx-toolbar-hidden-button-group {
+    margin-top: @GENERIC_TOOLBAR_ITEM_SPACING;
+    margin-bottom: @GENERIC_TOOLBAR_ITEM_SPACING;
+
+    .dx-buttongroup-wrapper {
+        .dx-buttongroup-item.dx-button {
+            .dx-button-content {
+                padding: @GENERIC_TOOLBAR_ITEM_SPACING 2 * @GENERIC_TOOLBAR_ITEM_SPACING;
+            }
+        }
+    }
+}
