--- a/styles/widgets/common/toolbar.less
+++ b/styles/widgets/common/toolbar.less
@@ -130,6 +130,14 @@
         right: auto;
         left: 0;
     }
+
+    .dx-toolbar-hidden-button-group {
+        .dx-buttongroup-wrapper {
+            .dx-buttongroup-item {
+                text-align: right;
+            }
+        }
+    }
 }
 
 .dx-toolbar-menu-section:empty {
@@ -183,4 +191,31 @@
 
 .dx-toolbar-item-invisible {
     display: none;
+}
+
+.dx-toolbar-hidden-button-group {
+    &.dx-state-hover {
+        background-color: transparent;
+    }
+
+    .dx-list-item-content {
+        padding: 0;
+
+        .dx-toolbar-item-auto-hide {
+            padding: 0;
+        }
+    }
+
+    .dx-buttongroup {
+        width: 100%;
+
+        .dx-buttongroup-wrapper {
+            flex-direction: column;
+
+            .dx-buttongroup-item {
+                border: none;
+                text-align: left;
+            }
+        }
+    }
 }
