--- a/styles/widgets/material/dropDownButton.material.less
+++ b/styles/widgets/material/dropDownButton.material.less
@@ -69,8 +69,8 @@
         }
     }
 
-    &:not(.dx-dropdownbutton-splitted) {
-        .dx-button-has-text {
+    &:not(.dx-dropdownbutton-has-arrow) {
+        .dx-button.dx-button-has-text {
             .dx-button-content {
                 padding-left: @MATERIAL_DROPDOWNBUTTON_HORIZONTAL_PADDING;
                 padding-right: @MATERIAL_DROPDOWNBUTTON_HORIZONTAL_PADDING;
