Fix rtl for button group in toolbar menu

--- a/styles/widgets/common/toolbar.less
+++ b/styles/widgets/common/toolbar.less
@@ -132,9 +132,11 @@
     }
 
     .dx-toolbar-hidden-button-group {
-        .dx-buttongroup-wrapper {
-            .dx-buttongroup-item {
-                text-align: right;
+        .dx-buttongroup {
+            .dx-buttongroup-wrapper {
+                .dx-buttongroup-item {
+                    text-align: right;
+                }
             }
         }
     }
