Correct fix of rtl mode for button group

--- a/styles/widgets/common/toolbar.less
+++ b/styles/widgets/common/toolbar.less
@@ -130,16 +130,6 @@
         right: auto;
         left: 0;
     }
-
-    .dx-toolbar-hidden-button-group {
-        .dx-buttongroup {
-            .dx-buttongroup-wrapper {
-                .dx-buttongroup-item {
-                    text-align: right;
-                }
-            }
-        }
-    }
 }
 
 .dx-toolbar-menu-section:empty {
@@ -217,6 +207,11 @@
             .dx-buttongroup-item {
                 border: none;
                 text-align: left;
+
+                .dx-rtl&,
+                .dx-rtl & {
+                    text-align: right;
+                }
             }
         }
     }
