dropDownButton - change horizontal paddings if the widget has no dropdown arrow (T888866)  (#13081)

--- a/styles/widgets/material/dropDownButton.material.less
+++ b/styles/widgets/material/dropDownButton.material.less
@@ -9,6 +9,8 @@
     @MATERIAL_TOGGLE_BUTTON_FLEX: 0 0 20px;
 }
 
+@MATERIAL_DROPDOWNBUTTON_HORIZONTAL_PADDING: 8px;
+
 .dx-size-dropdownbutton() {
     min-width: 0;
     height: 100%;
@@ -51,7 +53,7 @@
         min-width: 0;
 
         .dx-button-content {
-            padding-left: 8px;
+            padding-left: @MATERIAL_DROPDOWNBUTTON_HORIZONTAL_PADDING;
             padding-right: 2px;
 
             .dx-icon.dx-icon-right.dx-icon-spindown {
@@ -62,7 +64,16 @@
 
             .dx-rtl & {
                 padding-left: 2px;
-                padding-right: 8px;
+                padding-right: @MATERIAL_DROPDOWNBUTTON_HORIZONTAL_PADDING;
+            }
+        }
+    }
+
+    &:not(.dx-dropdownbutton-has-arrow) {
+        .dx-button.dx-button-has-text {
+            .dx-button-content {
+                padding-left: @MATERIAL_DROPDOWNBUTTON_HORIZONTAL_PADDING;
+                padding-right: @MATERIAL_DROPDOWNBUTTON_HORIZONTAL_PADDING;
             }
         }
     }
