--- a/styles/widgets/common/toolbar.less
+++ b/styles/widgets/common/toolbar.less
@@ -184,3 +184,35 @@
 .dx-toolbar-item-invisible {
     display: none;
 }
+
+.dx-toolbar-hidden-button-group {
+    &.dx-state-hover {
+        background-color: transparent;
+    }
+
+    .dx-list-item-content {
+        padding: 0;
+
+        .dx-toolbar-item-auto-hide {
+            padding: 0;
+        }
+    }
+
+    .dx-buttongroup {
+        width: 100%;
+
+        .dx-buttongroup-wrapper {
+            flex-direction: column;
+
+            .dx-buttongroup-item {
+                border: none;
+                text-align: left;
+
+                .dx-rtl&,
+                .dx-rtl & {
+                    text-align: right;
+                }
+            }
+        }
+    }
+}
