--- a/testing/runner/Views/Main/RunSuite.cshtml
+++ b/testing/runner/Views/Main/RunSuite.cshtml
@@ -178,7 +178,8 @@
                     'exceljs': '@Url.Content("~/node_modules/exceljs/dist/exceljs.js")',
                     'turndown': '@Url.Content("~/node_modules/turndown/lib/turndown.browser.umd.js")',
                     'showdown': '@Url.Content("~/node_modules/showdown/dist/showdown.js")',
-
+                    'rrule': '@Url.Content("~/node_modules/rrule/dist/es5/rrule.js")',
+                    'luxon': '@Url.Content("~/node_modules/luxon/src/luxon.js")',
                     // Global CSS
 
                     'common.css': '@Url.Content("~/artifacts/css/dx.common.css")',
