Scss themebuilder: add widgets option

--- a/themebuilder-scss/tests/data/scss/widgets/generic/_index.scss
+++ b/themebuilder-scss/tests/data/scss/widgets/generic/_index.scss
@@ -4,4 +4,6 @@ $size: null !default;
 @use "colors" with ($color: $color);
 @use "sizes" with ($size: $size);
 
+// public widgets
 @use "./accordion";
+@use "./dateBox"
