TextEditors - remove unecessary invalid input  borders in mobile FF

--- a/styles/widgets/common/textEditor.less
+++ b/styles/widgets/common/textEditor.less
@@ -77,6 +77,10 @@
     &:-webkit-autofill + .dx-placeholder {
         display: none;
     }
+
+    &:-moz-ui-invalid {
+        box-shadow: none;
+    }
 }
 
 .dx-show-clear-button {
