Scss themebuilder: integration tests

--- a/themebuilder-scss/tests/data/scss/widgets/generic/accordion/_index.scss
+++ b/themebuilder-scss/tests/data/scss/widgets/generic/accordion/_index.scss
@@ -10,12 +10,10 @@ $font-file: "icons";
 .dx-accordion {
     background-color: $base-font-family;
     color: $accordion-title-color;
-    font: url("icons/#{$font-file}.woff2");
+    background-image: url(icons/#{$font-file}.woff2);
 
     .from-base {
         background-color: $accordion-item-title-opened-bg;
         color: $base-accent;
     }
 }
-
-
