First step - render form instead of editor
(cherry picked from commit 2f3dd120613b26e9863464546fa2219dd11751fd)

--- a/styles/widgets/base/recurrenceEditor.less
+++ b/styles/widgets/base/recurrenceEditor.less
@@ -91,6 +91,12 @@
         float: none;
         padding: 0;
     }
+
+    .dx-recurrence-numberbox-interval {
+        .dx-recurrence-numberbox-interval-label {
+            margin-top: 25px;
+        }
+    }
 }
 
 .dx-scheduler-appointment-popup {
