dxGantt: Fix ConstraintViolation dialog appearance

--- a/styles/widgets/generic/gantt.generic.less
+++ b/styles/widgets/generic/gantt.generic.less
@@ -305,4 +305,14 @@
     }
 }
 
+.dx-form {
+    &.dx-cv-dialog {
+        padding-bottom: @GANTT_CV_DIALOG_PADDING_BOTTOM;
+
+        .dx-cv-dialog-row {
+            padding-top: @GANTT_CV_DIALOG_ROW_PADDING_TOP;
+        }
+    }
+}
+
 .gantt-icons-mixin(@gantt-icon-color);
