--- a/styles/widgets/generic/size-schemes/default.less
+++ b/styles/widgets/generic/size-schemes/default.less
@@ -68,6 +68,8 @@
 @GANTT_PARENT_TASK_HEIGHT: 19px;
 @GANTT_DEPENDENCY_SUCCESSOR_SIZE: 10px;
 @GANTT_MILESTONE_SIZE: 14px;
+@GANTT_CV_DIALOG_PADDING_BOTTOM: 8px;
+@GANTT_CV_DIALOG_ROW_PADDING_TOP: 12px;
 
 @GENERIC_CHECKBOX_SIZE: 22px;
 @GENERIC_SWITCH_HEIGHT: 24px;
