--- a/styles/widgets/generic/size-schemes/compact.less
+++ b/styles/widgets/generic/size-schemes/compact.less
@@ -66,6 +66,8 @@
 @GANTT_TASK_HEIGHT: 18px;
 @GANTT_DEPENDENCY_SUCCESSOR_SIZE: 9px;
 @GANTT_MILESTONE_SIZE: 12px;
+@GANTT_CV_DIALOG_PADDING_BOTTOM: 10px;
+@GANTT_CV_DIALOG_ROW_PADDING_TOP: 10px;
 
 @GENERIC_CHECKBOX_SIZE: 16px;
 @GENERIC_SWITCH_HEIGHT: 18px;
