--- a/testing/runner/Views/Main/RunSuite.cshtml
+++ b/testing/runner/Views/Main/RunSuite.cshtml
@@ -178,7 +178,9 @@
                     'exceljs': '@Url.Content("~/node_modules/exceljs/dist/exceljs.js")',
                     'turndown': '@Url.Content("~/node_modules/turndown/lib/turndown.browser.umd.js")',
                     'showdown': '@Url.Content("~/node_modules/showdown/dist/showdown.js")',
-
+                    'rrule': '@Url.Content("~/node_modules/rrule/dist/es5/rrule.js")',
+                    'luxon': '@Url.Content("~/node_modules/luxon/build/global/luxon.min.js")',
+                    'es6-object-assign': '@Url.Content("~/node_modules/es6-object-assign")',
                     // Global CSS
 
                     'common.css': '@Url.Content("~/artifacts/css/dx.common.css")',
@@ -212,6 +214,10 @@
                     },
                     'cldr': {
                         main: '../cldr.js',
+                        defaultExtension: 'js'
+                    },
+                    'es6-object-assign': {
+                        main: './index.js',
                         defaultExtension: 'js'
                     }
                 },
