Fix datebox popup margins for generic theme (T896846)

--- a/styles/widgets/generic/dateBox.generic.less
+++ b/styles/widgets/generic/dateBox.generic.less
@@ -80,11 +80,12 @@
 .dx-datebox-wrapper-calendar {
     .dx-popup-content {
         padding: 0;
+        margin: 0 @GENERIC_DATEBOX_OVERLAY_ITEM_MARGIN/2;
     }
 
     .dx-calendar {
         border: none;
-        margin: @GENERIC_DATEBOX_OVERLAY_ITEM_MARGIN;
+        margin: @GENERIC_DATEBOX_OVERLAY_ITEM_MARGIN @GENERIC_DATEBOX_OVERLAY_ITEM_MARGIN/2;
     }
 
     .dx-datebox-container-cell {
@@ -95,12 +96,11 @@
 
 .dx-datebox-wrapper-calendar.dx-datebox-wrapper-datetime {
     .dx-calendar {
-        margin-right: @GENERIC_DATEBOX_OVERLAY_ITEM_MARGIN/2;
         margin-bottom: @GENERIC_DATEBOX_OVERLAY_ITEM_MARGIN/2;
     }
 
     .dx-timeview {
-        margin: @GENERIC_DATEBOX_OVERLAY_ITEM_MARGIN @GENERIC_DATEBOX_OVERLAY_ITEM_MARGIN @GENERIC_DATEBOX_OVERLAY_ITEM_MARGIN/2 @GENERIC_DATEBOX_OVERLAY_ITEM_MARGIN/2;
+        margin: @GENERIC_DATEBOX_OVERLAY_ITEM_MARGIN @GENERIC_DATEBOX_OVERLAY_ITEM_MARGIN/2 @GENERIC_DATEBOX_OVERLAY_ITEM_MARGIN/2;
 
         .dx-datebox-adaptivity-mode& {
             margin: 0 @GENERIC_DATEBOX_OVERLAY_ITEM_MARGIN/2 @GENERIC_DATEBOX_OVERLAY_ITEM_MARGIN/2;
@@ -128,18 +128,6 @@
                     margin-left: 0;
                 }
             }
-        }
-    }
-
-    .dx-datebox-wrapper-calendar.dx-datebox-wrapper-datetime {
-        .dx-calendar {
-            margin-left: @GENERIC_DATEBOX_OVERLAY_ITEM_MARGIN/2;
-            margin-right: @GENERIC_DATEBOX_OVERLAY_ITEM_MARGIN;
-        }
-
-        .dx-timeview {
-            margin-right: @GENERIC_DATEBOX_OVERLAY_ITEM_MARGIN/2;
-            margin-left: @GENERIC_DATEBOX_OVERLAY_ITEM_MARGIN;
         }
     }
 }
