Fix recurrence editor form paddings

--- a/styles/widgets/common/scheduler.less
+++ b/styles/widgets/common/scheduler.less
@@ -25,6 +25,12 @@
     .dx-scrollable-content {
         padding-top: @SCHEDULER_POPUP_SCROLLABLE_CONTENT_PADDING;
     }
+
+    .dx-form.dx-recurrence-editor-container {
+        .dx-scrollable-content {
+            padding-top: 0;
+        }
+    }
 }
 
 .dx-popup-wrapper.dx-scheduler-appointment-tooltip-wrapper,
