--- a/styles/widgets/base/recurrenceEditor.less
+++ b/styles/widgets/base/recurrenceEditor.less
@@ -4,6 +4,7 @@
 
 @RECURRENCE_INTERVAL_NUMBER_BOX_MARGIN_TOP: 25px;
 @RECURRENCE_RADIO_GROUP_ITEM_PADDING: 10px;
+@RECURRENCE_BUTTON_GROUP_ITEM_PADDING: 8px;
 
 .dx-recurrence-repeat-on,
 .dx-recurrence-numberbox-interval-wrapper {
@@ -12,7 +13,7 @@
         padding-left: 0;
     }
 
-    .dx-box-item:first-child {
+    .dx-box-item:first-child:not(:only-child) {
         flex-grow: 0 !important; // stylelint-disable-line declaration-no-important
         min-width: auto !important; // stylelint-disable-line declaration-no-important
     }
@@ -44,4 +45,16 @@
 .dx-recurrence-numberbox-repeat-count {
     margin-left: @RECURRENCE_CONT_NUMBER_BOX_MARGIN;
     margin-right: @RECURRENCE_CONT_NUMBER_BOX_MARGIN;
+}
+
+.dx-recurrence-button-group {
+    width: 100%;
+
+    .dx-button-content {
+        padding: @RECURRENCE_BUTTON_GROUP_ITEM_PADDING;
+    }
+
+    .dx-buttongroup-wrapper > div {
+        flex: 1;
+    }
 }
