Small fix in material theme

--- a/styles/widgets/material/recurrenceEditor.material.less
+++ b/styles/widgets/material/recurrenceEditor.material.less
@@ -17,6 +17,10 @@
 @MATERIAL_RECURRENCE_RADIO_GROUP_MARGIN: 15px;
 @MATERIAL_RECURRENCE_DATE_BOX_MERGIN_LEFT: 23px;
 
+.dx-recurrence-numberbox-interval {
+    margin-right: @MATERIAL_RECURRENCE_NUMBER_BOX_MARGIN;
+}
+
 .dx-recurrence-numberbox-interval-label {
     font-size: @MATERIAL_BASE_FONT_SIZE;
     margin-top: @MATERIAL_RECURRENCE_INTERVAL_NUMBER_BOX_MARGIN_TOP;
