--- a/styles/widgets/ios7/color-schemes/default/ios7.default.less
+++ b/styles/widgets/ios7/color-schemes/default/ios7.default.less
@@ -1043,6 +1043,7 @@
 @SCHEDULER_FILL_FOCUSED_APPOINTMENT: false;
 @SCHEDULER_TIME_INDICATOR_BACKGROUND_COLOR: lighten(@SCHEDULER_BASE_BORDER_COLOR, 9%);
 @SCHEDULER_FIRST_MONTH_CELL_BACKGROUND_COLOR: fadeout(@SCHEDULER_APPOINTMENT_BASE_COLOR, 85%);
+@SCHEDULER_RECURRENCE_REPEAT_LABEL_OFFSET: 7px;
 
 //Menu
 
