Fix toolbar styles

--- a/scss/widgets/common/_toolbar.scss
+++ b/scss/widgets/common/_toolbar.scss
@@ -9,6 +9,7 @@
         display: none;
     }
 
+    .dx-device-mobile &.dx-toolbar-multiline,
     &.dx-toolbar-multiline {
         .dx-toolbar-items-container {
             height: 100%;
