--- a/styles/widgets/generic/recurrenceEditor.generic.less
+++ b/styles/widgets/generic/recurrenceEditor.generic.less
@@ -5,24 +5,22 @@
 @import (once) "./selectBox.generic.less";
 @import (once) "./dateBox.generic.less";
 
-@RECURRENCE_EDITOR_CONTAINER_PADDING_TOP: 17px;
-@RECURRENCE_EDITOR_CONTAINER_MARGIN_BOTTOM: 21px;
-@GENERIC_RECURRENCE_NUMBER_BOX_MARGIN_RIGHT: 11px;
-
-.dx-scheduler-recurrence-rule-item.dx-label-v-align {
-    .dx-recurrence-editor-container {
-        padding-top: @RECURRENCE_EDITOR_CONTAINER_PADDING_TOP;
-    }
+.dx-size-default() {
+    @GENERIC_RECURRENCE_INTERVAL_NUMBER_BOX_MARGIN_TOP: 25px;
 }
 
-.dx-recurrence-editor-container {
-    position: relative;
+.dx-size-compact() {
+    @GENERIC_RECURRENCE_INTERVAL_NUMBER_BOX_MARGIN_TOP: 18px;
+}
 
+@GENERIC_RECURRENCE_NUMBER_BOX_MARGIN_RIGHT: 11px;
+
+.dx-recurrence-editor-container {
     .dx-recurrence-numberbox-interval {
         margin-right: @GENERIC_RECURRENCE_NUMBER_BOX_MARGIN_RIGHT;
     }
 }
 
-.dx-recurrence-repeat-end-container {
-    margin: 0;
+.dx-recurrence-numberbox-interval-label {
+    margin-top: @GENERIC_RECURRENCE_INTERVAL_NUMBER_BOX_MARGIN_TOP;
 }
