--- a/scss/widgets/common/_scheduler.scss
+++ b/scss/widgets/common/_scheduler.scss
@@ -15,6 +15,12 @@ $SCHEDULER_POPUP_SCROLLABLE_CONTENT_PADDING: 20px;
   .dx-scrollable-content {
     padding-top: $SCHEDULER_POPUP_SCROLLABLE_CONTENT_PADDING;
   }
+
+  .dx-form.dx-recurrence-editor-container {
+    .dx-scrollable-content {
+      padding-top: 0;
+    }
+  }
 }
 
 .dx-popup-wrapper.dx-scheduler-appointment-tooltip-wrapper,
