--- a/scss/widgets/generic/recurrenceEditor/_index.scss
+++ b/scss/widgets/generic/recurrenceEditor/_index.scss
@@ -4,32 +4,18 @@
 @use "sizes" as *;
 @use "../sizes" as *;
 @use "../scheduler/sizes" as *;
-@use "../../base/recurrenceEditor" as * with (
-    $base-border-color: $base-border-color,
-    $SCHEDULER_RECURRENCE_EDITOR_ITEM_OFFSET: $SCHEDULER_RECURRENCE_EDITOR_ITEM_OFFSET,
-    $SCHEDULER_RECURRENCE_REPEAT_LABEL_OFFSET: $SCHEDULER_RECURRENCE_REPEAT_LABEL_OFFSET,
-);
+@use "../../base/recurrenceEditor" as *;
 // adduse
 
 
-$RECURRENCE_EDITOR_CONTAINER_PADDING_TOP: 17px;
-$RECURRENCE_EDITOR_CONTAINER_MARGIN_BOTTOM: 21px;
 $GENERIC_RECURRENCE_NUMBER_BOX_MARGIN_RIGHT: 11px;
 
-.dx-scheduler-recurrence-rule-item.dx-label-v-align {
-  .dx-recurrence-editor-container {
-    padding-top: $RECURRENCE_EDITOR_CONTAINER_PADDING_TOP;
-  }
-}
-
 .dx-recurrence-editor-container {
-  position: relative;
-
   .dx-recurrence-numberbox-interval {
     margin-right: $GENERIC_RECURRENCE_NUMBER_BOX_MARGIN_RIGHT;
   }
 }
 
-.dx-recurrence-repeat-end-container {
-  margin: 0;
+.dx-recurrence-numberbox-interval-label {
+  margin-top: $GENERIC_RECURRENCE_INTERVAL_NUMBER_BOX_MARGIN_TOP;
 }
