--- a/scss/widgets/generic/recurrenceEditor/_sizes.scss
+++ b/scss/widgets/generic/recurrenceEditor/_sizes.scss
@@ -1,3 +1,12 @@
 @use "../sizes" as *;
 // adduse
 
+$GENERIC_RECURRENCE_INTERVAL_NUMBER_BOX_MARGIN_TOP: null !default;
+
+@if $size == "default" {
+  $GENERIC_RECURRENCE_INTERVAL_NUMBER_BOX_MARGIN_TOP: 25px;
+}
+
+@else if $size == "compact" {
+  $GENERIC_RECURRENCE_INTERVAL_NUMBER_BOX_MARGIN_TOP: 18px;
+}
