--- a/scss/widgets/material/recurrenceEditor/_index.scss
+++ b/scss/widgets/material/recurrenceEditor/_index.scss
@@ -4,40 +4,27 @@
 @use "sizes" as *;
 @use "../sizes" as *;
 @use "../scheduler/sizes" as *;
-@use "../../base/recurrenceEditor" as * with (
-    $base-border-color: $base-border-color,
-    $SCHEDULER_RECURRENCE_EDITOR_ITEM_OFFSET: $SCHEDULER_RECURRENCE_EDITOR_ITEM_OFFSET,
-    $SCHEDULER_RECURRENCE_REPEAT_LABEL_OFFSET: $SCHEDULER_RECURRENCE_REPEAT_LABEL_OFFSET,
-);
+@use "../../base/recurrenceEditor" as *;
 // adduse
 
 
-$MATERIAL_RECURRENCE_NUMBER_BOX_MARGIN_RIGHT: 11px;
+$MATERIAL_RECURRENCE_NUMBER_BOX_MARGIN: 11px;
+$MATERIAL_RECURRENCE_BUTTON_GROUP_PADDING: 6px;
+$MATERIAL_RECURRENCE_RADIO_GROUP_MARGIN: 15px;
+$MATERIAL_RECURRENCE_DATE_BOX_MERGIN_LEFT: 23px;
 
-.dx-recurrence-editor-container {
-  position: relative;
+.dx-recurrence-numberbox-interval {
+  margin-right: $MATERIAL_RECURRENCE_NUMBER_BOX_MARGIN;
+}
 
-  .dx-recurrence-interval-field {
-    padding-top: 10px;
-  }
-
-  .dx-recurrence-numberbox-interval {
-    margin-right: $MATERIAL_RECURRENCE_NUMBER_BOX_MARGIN_RIGHT;
-  }
-
-  .dx-field {
-    display: 'block';
-    margin-bottom: 10px;
-  }
-
-  .dx-field-label {
-    padding: 16px 0 3px;
-  }
+.dx-recurrence-numberbox-interval-label {
+  font-size: $MATERIAL_BASE_FONT_SIZE;
+  margin-top: $MATERIAL_RECURRENCE_INTERVAL_NUMBER_BOX_MARGIN_TOP;
 }
 
 .dx-recurrence-button-group {
   .dx-button-content {
-    padding: 6px;
+    padding: $MATERIAL_RECURRENCE_BUTTON_GROUP_PADDING;
   }
 
   .dx-buttongroup-wrapper > div {
@@ -45,31 +32,15 @@ $MATERIAL_RECURRENCE_NUMBER_BOX_MARGIN_RIGHT: 11px;
   }
 }
 
-.dx-scheduler-recurrence-rule-item.dx-field-item {
-  .dx-recurrence-radiogroup-repeat-type {
-    top: 10px;
-  }
-
-  .dx-recurrence-repeat-end-container {
-    margin: 0;
-  }
-
-  .dx-recurrence-repeat-on {
-    margin-bottom: 10px;
-  }
-
-  .dx-recurrence-repeat-end-container-label,
-  .dx-recurrence-repeat-end-container {
-    padding-top: 0;
-    line-height: 38px;
-  }
-
-  .dx-recurrence-datebox-until-date {
-    margin-left: 23px;
-  }
-
-  .dx-recurrence-numberbox-repeat-count {
-    margin-left: 11px;
-    margin-right: $MATERIAL_RECURRENCE_NUMBER_BOX_MARGIN_RIGHT;
-  }
+.dx-recurrence-radiogroup-repeat-type {
+  margin: $MATERIAL_RECURRENCE_RADIO_GROUP_MARGIN 0;
 }
+
+.dx-recurrence-datebox-until-date {
+  margin-left: $MATERIAL_RECURRENCE_DATE_BOX_MERGIN_LEFT;
+}
+
+.dx-recurrence-numberbox-repeat-count {
+  margin: 0 $MATERIAL_RECURRENCE_NUMBER_BOX_MARGIN 0 $MATERIAL_RECURRENCE_NUMBER_BOX_MARGIN;
+}
+
