--- a/scss/widgets/base/_scheduler.scss
+++ b/scss/widgets/base/_scheduler.scss
@@ -2294,7 +2294,12 @@ $SCHEDULER_APPOINTMENT_FORM_LABEL_PADDING: 20px;
       }
 
       .dx-scheduler-group-header-content {
+        display: flex;
         height: 40px;
+
+        > div {
+          margin: auto;
+        }
       }
 
       .dx-scheduler-header-panel {
