--- a/styles/widgets/base/scheduler.less
+++ b/styles/widgets/base/scheduler.less
@@ -2300,7 +2300,12 @@
             }
 
             .dx-scheduler-group-header-content {
+                display: flex;
                 height: 40px;
+
+                > div {
+                    margin: auto;
+                }
             }
 
             .dx-scheduler-header-panel {
