FileManager - Folder icons are overlapped with text in IE 11 (T902424)

--- a/styles/widgets/common/fileManager.less
+++ b/styles/widgets/common/fileManager.less
@@ -412,6 +412,10 @@
         display: flex;
         align-items: flex-end;
 
+        & > .dx-icon {
+            flex: 0 0 auto;
+        }
+
         .dx-filemanager-dirs-tree-item-text {
             flex: 1 auto;
             white-space: nowrap;
