--- a/scss/widgets/base/_recurrenceEditor.scss
+++ b/scss/widgets/base/_recurrenceEditor.scss
@@ -1,5 +1,5 @@
 $RECURRENCE_CONT_NUMBER_BOX_MARGIN: 11px;
-$RECURRENCE_UNTIL_DATE_BOX_BOX_MARGIN: 23px;
+$RECURRENCE_UNTIL_DATE_BOX_BOX_MARGIN: 28px;
 $RECURRENCE_LABEL_LINE_HEIGHT_MARGIN: 36px;
 
 $RECURRENCE_INTERVAL_NUMBER_BOX_MARGIN_TOP: 25px;
@@ -17,6 +17,10 @@ $RECURRENCE_BUTTON_GROUP_ITEM_PADDING: 8px;
     flex-grow: 0 !important; // stylelint-disable-line declaration-no-important
     min-width: auto !important; // stylelint-disable-line declaration-no-important
   }
+}
+
+.dx-layout-manager .dx-field-item.dx-recurrence-repeat-on {
+  padding-top: 0;
 }
 
 .dx-recurrence-numberbox-interval-label {
@@ -40,7 +44,7 @@ $RECURRENCE_BUTTON_GROUP_ITEM_PADDING: 8px;
 }
 
 .dx-recurrence-numberbox-repeat-count {
-  margin-left: $RECURRENCE_CONT_NUMBER_BOX_MARGIN;
+  margin-left: $RECURRENCE_CONT_NUMBER_BOX_MARGIN + 5px;
   margin-right: $RECURRENCE_CONT_NUMBER_BOX_MARGIN;
 }
 
