--- a/scss/widgets/base/_recurrenceEditor.scss
+++ b/scss/widgets/base/_recurrenceEditor.scss
@@ -1,4 +1,5 @@
-$RECURRENCE_CONT_NUMBER_BOX_MARGIN: 11px;
+$RECURRENCE_CONT_NUMBER_BOX_RIGHT_MARGIN: 11px;
+$RECURRENCE_CONT_NUMBER_BOX_LEFT_MARGIN: 16px;
 $RECURRENCE_UNTIL_DATE_BOX_BOX_MARGIN: 28px;
 $RECURRENCE_LABEL_LINE_HEIGHT_MARGIN: 36px;
 
@@ -50,8 +51,8 @@ $RECURRENCE_BUTTON_GROUP_ITEM_PADDING: 8px;
 }
 
 .dx-recurrence-numberbox-repeat-count {
-  margin-left: $RECURRENCE_CONT_NUMBER_BOX_MARGIN + 5px;
-  margin-right: $RECURRENCE_CONT_NUMBER_BOX_MARGIN;
+  margin-left: $RECURRENCE_CONT_NUMBER_BOX_LEFT_MARGIN;
+  margin-right: $RECURRENCE_CONT_NUMBER_BOX_RIGHT_MARGIN;
 }
 
 .dx-recurrence-button-group {
